Changed massage type success message and restructured 'Date/Time' portion of Appointment Details

--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -83,6 +83,10 @@ a, input {
   line-height: 1.25;
 }
 
+.info p {
+  margin-bottom: 0.25rem;
+}
+
 .info > div {
   white-space: nowrap;
   overflow: hidden;
