--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -328,9 +328,12 @@
       </div>
       <h5 class="h5">Appointment Details</h5>
       <div class="details-form info">
-        <div>Date/Time</div>
+        <div class="vertical-center">
+          <div>Date/Time</div>
+        </div>
         <div>
-          <a href="#" id="date"></a>
+          <p id="date"></p>
+          <a href="#">Click to reschedule.</a>
         </div>
         <div class="vertical-center">
           <div>Massage Type</div>
