Added reschedule form to admin modal

--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -12,6 +12,15 @@ a, input {
   outline: 0;
 }
 
+.btn-link {
+  padding: 0;
+  background: none;
+  border: none;
+  outline: none;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .page {
   min-height: 100vh;
   background-color: #ffcc8d;
