--- a/booking/templates/booking/index.html
+++ b/booking/templates/booking/index.html
@@ -34,7 +34,7 @@
           <input type="radio" name="massage" value="" checked>
           <label id="unspecified" class="font-italic" for="massage">unspecified</label>
         </div>
-        <p class="text-center">You may change your selection at the time of your appointment.</p>
+        <p class="text-center">You may change your selection at any time on the Profile page.</p>
         <input type="submit" class="btn btn-primary" value="Submit">
       </form>
     </div>
