--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -210,13 +210,6 @@
             <h1 class="h1 text-center">{{ next_appt.date_start|date:"j" }}</h1>
             <p class="text-center">{{ next_appt.date_start|date:"g:i a" }}</p>
           </div>
-          {% if next_appt.massage == "DT" %}
-          <p class="massage-type text-center">Massage type: <span>Deep Tissue</span></p>
-          {% elif next_appt.massage == "SW" %}
-          <p class="massage-type text-center">Massage type: <span>Swedish</span></p>
-          {% else %}
-          <p class="massage-type text-center">Massage type: <span>unspecified</span></p>
-          {% endif %}
           <div class="form-container">
             <form action="{% url 'booking:reschedule_form' %}" method="POST">
               {% csrf_token %}
@@ -229,6 +222,44 @@
               <input type="hidden" name="appointment-id" value="{{ next_appt.pk }}">
               <input class="btn btn-secondary" type="submit" value="Cancel Appointment">
             </form>
+          </div>
+          {% if next_appt.massage == "SW" %}
+          <p class="massage-type text-center">Massage type: <a href="#">Swedish</a></p>
+          {% elif next_appt.massage == "DT" %}
+          <p class="massage-type text-center">Massage type: <a href="#">Deep Tissue</a></p>
+          {% else %}
+          <p class="massage-type text-center">Massage type: <a href="#">unspecified</a></p>
+          {% endif %}
+          <div id="changeMassageType">
+            {% csrf_token %}
+            <input type="hidden" name="profile-id" value="{{ profile.pk }}">
+            <div class="radio">
+              {% if next_appt.massage == "SW" %}
+              <input type="radio" name="massage" value="SW" checked>
+              <label id="swedish" for="massage">Swedish</label>
+              <input type="radio" name="massage" value="DT">
+              <label id="deepTissue" for="massage">Deep Tissue</label>
+              <input type="radio" name="massage" value="">
+              <label id="unspecified" class="font-italic" for="massage">unspecified</label>
+              {% elif next_appt.massage == "DT" %}
+              <input type="radio" name="massage" value="SW">
+              <label id="swedish" for="massage">Swedish</label>
+              <input type="radio" name="massage" value="DT" checked>
+              <label id="deepTissue" for="massage">Deep Tissue</label>
+              <input type="radio" name="massage" value="">
+              <label id="unspecified" class="font-italic" for="massage">unspecified</label>
+              {% else %}
+              <input type="radio" name="massage" value="SW">
+              <label id="swedish" for="massage">Swedish</label>
+              <input type="radio" name="massage" value="DT">
+              <label id="deepTissue" for="massage">Deep Tissue</label>
+              <input type="radio" name="massage" value="" checked>
+              {% endif %}
+            </div>
+            <div class="btn-container">
+              <a href="#" class="btn btn-secondary">Cancel</a>
+              <a href="#" class="btn btn-primary">Update</a>
+            </div>
           </div>
           {% endif %}
         </div>
@@ -350,11 +381,11 @@
         </div>
         <div class="radio">
           <input type="radio" name="massage" value="SW">
-          <label id="swedish" for="massage">Swedish</label>
+          <label id="swedishModal" for="massage">Swedish</label>
           <input type="radio" name="massage" value="DT">
-          <label id="deepTissue" for="massage">Deep Tissue</label>
+          <label id="deepTissueModal" for="massage">Deep Tissue</label>
           <input type="radio" name="massage" value="">
-          <label id="unspecified" class="font-italic" for="massage">unspecified</label>
+          <label id="unspecifiedModal" class="font-italic" for="massage">unspecified</label>
         </div>
       </div>
       {% csrf_token %}
