Added functionality for admins to cancel appointments

--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -139,6 +139,10 @@ a, input {
   text-align: center;
 }
 
+#modalContent .btn-container form {
+  display: inline;
+}
+
 .edit-profile .btn-container,
 .edit-password .btn-container {
   height: 3.5rem;
