Added functionality to black-out dates and reverse changes if needed

--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -215,12 +215,22 @@ a, input {
   margin: 0 auto;
 }
 
-.admin:not(.h1) {
+.admin:not(.h1, .h3),
+#appointments_wrapper {
   font-family: 'Open Sans', Arial, sans-serif;
 }
 
 .admin .h1 {
   margin-top: 2rem;
+}
+
+#datePicker {
+  display: block;
+  position: unset;
+}
+
+#datePicker .close {
+  display: none;
 }
 
 #appointments tbody tr:hover :not(.dataTables_empty) {
