--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -30,9 +30,11 @@
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'home/css/reset.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'home/css/navbar.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'booking/css/date_picker.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'users/css/style.css' %}">
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
   <script type="text/javascript" src="{% static 'users/js/script.js' %}"></script>
+  <script type="text/javascript" src="{% static 'users/js/date_picker.js' %}"></script>
   <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 </head>
 <body>
