Changed black-out logic to work with update_appointments command

--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -309,7 +309,7 @@
     </div>
     <div class="row admin">
       <div class="col-12">
-          <h3 class="h3">Black-out Dates</h3>
+          <h3 class="h3">Add/Black-out Dates</h3>
           <div id="datePicker"></div>
           <div id="datePickerDate">
             <input type="hidden" name="year" value="{{ date|date:'Y' }}" autocomplete="off">
