Changed colors of date picker border, calendar controls background, and appointment slots

--- a/booking/static/booking/css/date_picker.css
+++ b/booking/static/booking/css/date_picker.css
@@ -4,7 +4,7 @@
   height: 208px;
   position: absolute;
   background-color: #efefef;
-  border: 0.5rem solid #a2b817;
+  border: 0.5rem solid #6db12e;
   border-radius: 0.5rem;
   padding: 0.25rem;
   -webkit-user-select: none;
