--- a/booking/static/booking/css/style.css
+++ b/booking/static/booking/css/style.css
@@ -48,7 +48,7 @@ html, body {
   display: grid;
   grid-template-columns: 2.5rem calc(100% - 5rem) 2.5rem;
   height: 2.5rem;
-  background-color: gray;
+  background-color: #414141;
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
   -webkit-user-select: none;
@@ -122,7 +122,7 @@ html, body {
   width: calc(100% - 6rem);
   padding: 0.5rem;
   color: white;
-  background-color: blue;
+  background-color: #007bff;
   border-radius: 0.5rem;
   cursor: pointer;
 }
