--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -51,6 +51,7 @@
               value="Login"
             >
           </form>
+          <a href="#">Forgot Password?</a>
         </div>
         <div class="col-12 col-md-6">
           <h3 class="h3">Register</h3>
