--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -40,7 +40,12 @@
 </head>
 <body>
   {% include 'home/navbar.html' %}
-  {% block content %}
-  {% endblock %}
+  <div class="page">
+    <div class="nav-placeholder"></div>
+    <div class="container">
+      {% block content %}
+      {% endblock %}
+    </div>
+  </div>
 </body>
 </html>
