--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -12,7 +12,7 @@
 <form method="POST">
   {% csrf_token %}
   <input class="form-control" name="new_password1" placeholder="New Password" required="true" id="id_new_password1" type="password">
-  <input class="form-control" name="new_password2" placeholder="New Password Confirm" required="true" id="id_new_password2" type="password">
+  <input class="form-control" name="new_password2" placeholder="Confirm Password" required="true" id="id_new_password2" type="password">
   <button class="btn btn-primary form-control" type="submit">Change Password</button>
 </form>
 {% else %}
