--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -6,11 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>The Pharmasseuse</title>
   <link rel="shortcut icon" href="https://pharmasseuse.com/favicon.ico">
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'home/css/bootstrap/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'home/css/bootstrap/bootstrap.min.css.map' %}">
   <link
     rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
+  <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css.map">
   <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
@@ -28,7 +34,6 @@
     src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-  {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'home/css/reset.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'home/css/navbar.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'home/css/footer.css' %}">
