--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,11 +11,11 @@
 <div class="chevron d-none d-xl-block">
   <h1 class="h1"><i class="fas fa-chevron-down"></i></h1>
 </div>
-<div class="content">
+<div class="content content-1">
   <div class="container m-tb-2rem">
     <div class="row">
-      <div class="col col-12 col-md-6 img">
-        <img src="{% static 'home/img/pills.jpg' %}" alt="pills">
+      <div class="col col-12 col-md-6 img img-1">
+        <img src="{% static 'home/img/massage.jpg' %}" alt="massage">
       </div>
       <div class="paragraph col col-md-6 col-sm-12">
         <div class="gradient-border">
@@ -29,36 +29,34 @@
       </div>
     </div>
     <div class="row">
-      <div class="col col-12 d-md-none img">
-        <img src="{% static 'home/img/massage.jpg' %}" alt="massage">
+      <div class="col col-12 d-md-none img-2">
+        <img src="{% static 'home/img/pills.jpg' %}" alt="pills">
       </div>
       <div class="paragraph col col-md-6 col-sm-12">
         <div class="gradient-border">
         </div>
         <p class="text-md-right">
-          Choose from a Swedish or a deep tissue massage. The Swedish massage is
-          a gentler and softer massage, more suited for those who have sensitive
-          skin. The deep tissue massage is more suited for those in chronic pain,
-          were involved in strenuous activities, or who are continually troubled
-          by previous injuries.
+          Choose from a Swedish or a deep tissue massage. Even though these are
+          two different massage types, each massage is customized according to
+          the needs of the client by incorporating elements from both massages.
           <br>
           <a href="http://www.differencebetween.net/miscellaneous/difference-between-swedish-massage-and-deep-tissue-massage/#ixzz5tmtx6Bdb">Read more</a>
           <i class="fas fa-external-link-alt" title="External Link"></i>
         </p>
       </div>
-      <div class="col col-md-6 d-none d-md-block img">
-        <img src="{% static 'home/img/massage.jpg' %}" alt="massage">
+      <div class="col col-md-6 d-none d-md-block img-2">
+        <img src="{% static 'home/img/pills.jpg' %}" alt="pills">
       </div>
     </div>
   </div>
 </div>
 <div class="rocks">
 </div>
-<div class="content">
+<div class="content content-2">
   <div class="container">
     <div class="row">
         <div class="col-12 col-lg-6">
-            <div class="map-outer">
+            <div class="map-outer m-tb-2rem">
               <div class="gmap-canvas">
                 <iframe width="300" height="300" id="gmapCanvas" src="https://maps.google.com/maps?q=10745%20S%20California%20ave%20Chicago%2C%20IL%2060655&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
               </div>
