--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -150,11 +150,15 @@ a, input {
 .edit-profile .btn-container,
 .edit-password .btn-container,
 #changeMassageType .btn-container,
-#modalContent .btn-container {
+#detailsModalContent .btn-container {
   text-align: center;
 }
 
-#modalContent .btn-container form {
+#detailsModalContent .btn-container > * {
+  margin: 0.25rem;
+}
+
+#detailsModalContent .btn-container form {
   display: inline;
 }
 
@@ -248,6 +252,10 @@ a, input {
   display: none;
 }
 
+#appointments_wrapper {
+  overflow-x: scroll;
+}
+
 #appointments tbody tr:hover :not(.dataTables_empty) {
   color: white;
   background-color: #007bff;
@@ -262,33 +270,68 @@ a, input {
   user-select: none;
 }
 
-#modal {
+#addAppointment {
+  display: flex;
+  margin: 1rem auto 2rem auto;
+}
+
+#detailsModal {
   display: none;
   position: fixed;
   z-index: 3;
-  padding-top: 6rem;
-  left: 0;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-#modalContent {
-  position: relative;
-  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-  background-color: #efefef;
-  margin: 2rem;
-  padding: 1rem;
+#detailsModal .close {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 2rem;
+  height: 2rem;
 }
 
-#modalContent .edit {
+#detailsModalContent {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  background-color: #efefef;
+  padding: 1rem;
+  overflow-y: scroll;
+}
+
+#detailsModalContent .edit {
   z-index: 4;
   position: absolute;
   top: 55px;
   right: 1rem;
+}
+
+@media (min-width: 576px) {
+  #appointments_wrapper {
+    overflow-x: visible;
+  }
+
+  #detailsModalContent {
+    position: fixed;
+    top: 50%;
+    right: unset;
+    bottom: unset;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 508px;
+    height: unset;
+    overflow-y: visible;
+  }
 }
 
 @media (min-width: 768px) {
@@ -307,5 +350,9 @@ a, input {
     transform: translateY(-50%);
     margin: 0;
     width: 100%;
+  }
+
+  #detailsModalContent {
+    width: 688px;
   }
 }
