--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -303,6 +303,7 @@
           {% endfor %}
         </tbody>
       </table>
+      <button id="addAppointment" class="btn btn-secondary text-center">Add Appointment</button>
   </div>
 </div>
 <div class="row admin">
@@ -320,93 +321,93 @@
 </div>
 </div>
 {% if profile.user.is_superuser == True %}
-<div id="modal">
-<div class="container">
-<div id="modalContent">
-  <span class="close">&times;</span>
-  <h3 class="h3">Details</h3>
-  <h5 class="h5">Client Info</h5>
-  <div class="edit">
-    <a href="#">Edit</a>
-  </div>
-  <div class="info">
-    <div>Name</div>
-    <div id="name"></div>
-    <div>Email</div>
-    <div id="email"></div>
-    <div>Phone Number</div>
-    <div id="phone"></div>
-  </div>
-  <div class="edit-profile">
-    <form action="{% url 'users:edit_profile' %}" method="POST">
-      {% csrf_token %}
-      <input type="hidden" name="profile-id">
-      <div class="form-inline">
-        <input
-          type="text"
-          name="first-name"
-          placeholder="First Name"
-          class="form-control col-6"
-        >
-        <input
-          type="text"
-          name="last-name"
-          placeholder="Last Name"
-          class="form-control col-6"
-        >
-      </div>
-      <input
-        type="text"
-        name="email"
-        placeholder="Email"
-        class="form-control"
-      >
-      <input
-        type="text"
-        name="phone"
-        placeholder="Phone"
-        class="form-control"
-      >
-      <div class="btn-container">
-        <input class="btn btn-primary" type="submit" value="Edit">
-        <input class="btn btn-secondary" type="submit" value="Cancel">
-      </div>
-    </form>
-  </div>
-  <h5 class="h5">Appointment Details</h5>
-  <div class="details-form info">
-    <div class="vertical-center">
-      <div>Date/Time</div>
+<div id="detailsModal">
+  <div id="detailsModalContent">
+    <span class="close">&times;</span>
+    <h3 class="h3">Details</h3>
+    <h5 class="h5">Client Info</h5>
+    <div class="edit">
+      <a href="#">Edit</a>
     </div>
-    <div>
-      <p id="date"></p>
-      <form action="{% url 'booking:reschedule_form' %}" method="POST">
+    <div class="info">
+      <div>Name</div>
+      <div id="name"></div>
+      <div>Email</div>
+      <div id="email"></div>
+      <div>Phone Number</div>
+      <div id="phone"></div>
+    </div>
+    <div class="edit-profile">
+      <form action="{% url 'users:edit_profile' %}" method="POST">
         {% csrf_token %}
         <input type="hidden" name="profile-id">
-        <input class="btn-link" type="submit" value="Click to reschedule.">
+        <div class="form-inline">
+          <input
+            type="text"
+            name="first-name"
+            placeholder="First Name"
+            class="form-control col-6"
+          >
+          <input
+            type="text"
+            name="last-name"
+            placeholder="Last Name"
+            class="form-control col-6"
+          >
+        </div>
+        <input
+          type="text"
+          name="email"
+          placeholder="Email"
+          class="form-control"
+        >
+        <input
+          type="text"
+          name="phone"
+          placeholder="Phone"
+          class="form-control"
+        >
+        <div class="btn-container">
+          <input class="btn btn-primary" type="submit" value="Edit">
+          <input class="btn btn-secondary" type="submit" value="Cancel">
+        </div>
       </form>
     </div>
-    <div class="vertical-center">
-      <div>Massage Type</div>
+    <h5 class="h5">Appointment Details</h5>
+    <div class="details-form info">
+      <div class="vertical-center">
+        <div>Date/Time</div>
+      </div>
+      <div>
+        <p id="date"></p>
+        <form action="{% url 'booking:reschedule_form' %}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="profile-id">
+          <input class="btn-link" type="submit" value="Click to reschedule.">
+        </form>
+      </div>
+      <div class="vertical-center">
+        <div>Massage Type</div>
+      </div>
+      <div class="radio">
+        <input type="radio" name="massage-admin" value="SW">
+        <label id="swedishModal" for="massage-admin">Swedish</label>
+        <input type="radio" name="massage-admin" value="DT">
+        <label id="deepTissueModal" for="massage-admin">Deep Tissue</label>
+        <input type="radio" name="massage-admin" value="">
+        <label id="unspecifiedModal" class="font-italic" for="massage-admin">unspecified</label>
+      </div>
     </div>
-    <div class="radio">
-      <input type="radio" name="massage-admin" value="SW">
-      <label id="swedishModal" for="massage-admin">Swedish</label>
-      <input type="radio" name="massage-admin" value="DT">
-      <label id="deepTissueModal" for="massage-admin">Deep Tissue</label>
-      <input type="radio" name="massage-admin" value="">
-      <label id="unspecifiedModal" class="font-italic" for="massage-admin">unspecified</label>
+    {% csrf_token %}
+    <h5 class="h5">Actions</h5>
+    <div class="btn-container">
+      <a id="updateMassageType" class="btn btn-primary" href="#">Update Massage Type</a>
+      <form action="{% url 'booking:cancel' %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="profile-id">
+        <input class="btn btn-danger" type="submit" value="Cancel Appointment">
+      </form>
     </div>
-  </div>
-  {% csrf_token %}
-  <h5 class="h5">Actions</h5>
-  <div class="btn-container">
-    <a id="updateMassageType" class="btn btn-primary" href="#">Update Massage Type</a>
-    <form action="{% url 'booking:cancel' %}" method="POST">
-      {% csrf_token %}
-      <input type="hidden" name="profile-id">
-      <input class="btn btn-danger" type="submit" value="Cancel Appointment">
-    </form>
   </div>
 </div>
 {% endif %}
