--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -410,5 +410,20 @@
     </div>
   </div>
 </div>
+<div id="addAppointmentModal">
+  <div id="addAppointmentModalContent">
+    <span class="close">&times;</span>
+    <h3 class="h3">Add Appointment</h3>
+    <form action="#" method="POST">
+      <input class="form-control" type="text" name="first-name" placeholder="First Name" id="firstNameAddAppointment" autocomplete="off">
+      <input class="form-control" type="text" name="last-name" placeholder="Last Name" id="lastNameAddAppointment" autocomplete="off">
+      <ul id="dropdown"></ul>
+      <div class="row">
+        <label class="form-control col-6" for="active-id">User ID</label>
+        <input class="form-control col-6" type="number" name="active-id" value="0" autocomplete="off" disabled>
+      </div>
+    </form>
+  </div>
+</div>
 {% endif %}
 {% endblock %}
