--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -415,13 +415,17 @@
     <span class="close">&times;</span>
     <h3 class="h3">Add Appointment</h3>
     <form action="#" method="POST">
+      {% csrf_token %}
       <input class="form-control" type="text" name="first-name" placeholder="First Name" id="firstNameAddAppointment" autocomplete="off">
       <input class="form-control" type="text" name="last-name" placeholder="Last Name" id="lastNameAddAppointment" autocomplete="off">
-      <ul id="dropdown"></ul>
+      <div id="dropdownContainer"></div>
       <div class="row">
         <label class="form-control col-6" for="active-id">User ID</label>
-        <input class="form-control col-6" type="number" name="active-id" value="0" autocomplete="off" disabled>
+        <input class="form-control col-6" type="text" name="active-id" value="0" autocomplete="off" disabled>
       </div>
+      <input class="form-control" type="email" name="email" placeholder="Email" id="emailAddAppointment" autocomplete="off">
+      <button id="clearFields" class="btn btn-danger">Clear Fields</button>
+      <input class="form-control btn btn-primary" type="submit" value="Schedule Appointment">
     </form>
   </div>
 </div>
