--- a/users/templates/users/dropdown.html
+++ b/users/templates/users/dropdown.html
@@ -5,6 +5,7 @@
     <span class="first-name">{{ profile.user.first_name }}</span>
     <input type="hidden" name="id" value="{{ profile.pk }}">
     <input type="hidden" name="email" value="{{ profile.user.email }}">
+    <input type="hidden" name="phone" value="{{ profile.phone }}">
   </li>
   {% endfor %}
 </ul>
